@startuml
!define ABSTRACT_COLOR #FFE5B4
!define ENTITY_COLOR #B4D7FF
!define VALUE_COLOR #D7FFB4

skinparam classBackgroundColor<<abstract>> ABSTRACT_COLOR
skinparam classBackgroundColor<<entity>> ENTITY_COLOR
skinparam classBackgroundColor<<value>> VALUE_COLOR
skinparam linetype ortho

'================ ABSTRACT =================

abstract class Korisnik <<abstract>> {
    - id: int
    - tipKorisnika: TipKorisnika
    - korisnickoIme: string
    - lozinka: string
    - ime: string
    - prezime: string
    - datumRegistracije: DateTime

    + dodajUdomitelja(udomitelj): void
    + udomiZivotinju(zivotinja, udomitelj): void
    + dodajSlikuŽivotinje(zivotinja, slika): void
    + obradiZahtevZaUdomljavanje(zahtev): void
    + dodajNapomenuPriUdomljavanju(udomljavanje, napomena): void
}

'================ USERS =================

class SistemskiAdmin {
    - korisnickoIme: string
    - lozinka: string

    + registrujUdruzenje(udruzenje): void
    + registrujAdmina(admin): void
}

class AdminUdruzenja {
    + generisiIzvestaj(tip): Izvestaj
    + objaviIzveštaj(Izvestaj): void
    + dodajVolontera(): List<Volonter>
    + dodajZivotinju(zivotinja): void
    + importujIzvodRacunaUdruzenja(): void

    + prihvatiZahtevZaVolontiranje(zahtev): void
    + odbijZahtevZaVolontiranje(zahtev): void
}

class Volonter {
    + uzmiZivotinjuUSmestaj(zivotinja): void
}

class Udomitelj {
    - id: int
    - ime: string
    - prezime: string
}

'================ ENTITIES =================

class Udruzenje <<entity>> {
    - id: int
    - naziv: string
    - opis: string
    - datumOsnivanja: DateTime
}

class Zivotinja <<entity>> {
    - id: int
    - naziv: string
    - kategorija: KategorijaZivotinje
    - starost: int
    - pol: PolZivotinje
    - rasa: string
    - zdravstvenoStanje: ZdravljeZivotinje
    - opis: string
    - status: StatusZivotinje
    - slike: List<String>
    - video: List<String>
    - datumUnosa: DateTime
}

enum KategorijaZivotinje {
    PAS
    MAČKA
    ZEČEVI
    PTICE
    OSTALO
}

enum StatusZivotinje {
    DOSTUPNA
    ZAUZETA
    UDOMLJENA
}

enum PolZivotinje {
    MUŠKI
    ŽENSKI
    NEPOZNATO
}

enum ZdravljeZivotinje {
    ZDRAVA
    LOŠIJEG ZDRAVLJA
    BOLESNA
}

enum NacinObavestavanja {
    SMS
    EMAIL
    RUCNO
}

class ZahtevZaUdomljavanje <<entity>> {
    - id: int
    - datumPodnosenja: DateTime
    - datumUdomljavanja: DateTime
    - podnosilac: Udomitelj
    - status: StatusZahteva
    - napomena: string
    - nacinObavestavanja: NacinObavestavanja
}

enum StatusZahteva {
    CEKA
    PRIHVACEN
    ODBIJEN
    PREUZETA
}

class Izvestaj {
    - id: int
    - tip: TipIzvestaja
    - period: PeriodIzvestaja
    - datumGenerisanja: DateTime
    - statistika: Statistika
}

enum TipIzvestaja {
    UDOMLJAVANJA
    DONACIJE
}

enum PeriodIzvestaja {
    DNEVNI
    NEDELJNI
    MESECNI
}

class Statistika <<value>> {
    - brojUdomljenih: int
    - brojVracenih: int
    - ukupnaDonacija: decimal
    - vrsteDonacija: List<VrstaDonacije>
}

class PrijavaZaVolontiranje {
    - id: int
    - ime: string
    - prezime: string
    - opis: string
    - statusPrijave: StatusPrijave
}

enum StatusPrijave {
    ČEKA
    ODBIJEN
    PRIHVAĆEN
}

'================ VALUE OBJECTS =================

class KontaktPodaci <<value>> {
    - telefon: string
    - email: string
    - adresa: string
}

'================ RELATIONS =================

Korisnik <|-- AdminUdruzenja
Korisnik <|-- Volonter
Korisnik *-- KontaktPodaci

Udruzenje *-- KontaktPodaci
Udruzenje "1" -- "*" Zivotinja
Udruzenje "1" -- "*" Volonter
Udruzenje "1" -- "1..*" AdminUdruzenja

AdminUdruzenja "1" -- "*" Izvestaj

Volonter "0..1" -- "*" Zivotinja

Udomitelj "0..1" -- "*" Zivotinja
Udomitelj *-- KontaktPodaci

ZahtevZaUdomljavanje "*" -- "1" Zivotinja

Izvestaj --> Statistika

PrijavaZaVolontiranje *-- KontaktPodaci

@enduml